# SJTUPaperDownloader

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
doc/: Task.md
extension/: background.js  content.css  content.js  manifest.json  popup.css  popup.html  popup.js
models/: README.md
native-messaging/: paperdownloader.host.template.json
paperdownloader/: __init__.py  captcha.py  cli.py  config.py  models.py  native_host.py  service.py  task_store.py  textmatch.py  workflow.py
scripts/: debug_ebsco_download.py  install_native_host_windows.ps1
tests/: test_native_host.py  test_textmatch.py
