[project]
name = "paperdownloader"
version = "0.1.0"
description = "Chrome extension and local Playwright service for downloading papers through SJTU library access"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "onnxruntime>=1.26.0",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "playwright>=1.59.0",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.46.0",
]
