[project]
name = "paperdownloader"
version = "0.1.0"
description = "Chrome extension and native host for downloading papers through SJTU library access"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "onnxruntime>=1.26.0",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "playwright>=1.59.0",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
]

[project.scripts]
paperdownloader-native-host = "paperdownloader.native_host:main"
